[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/godot_db_manager/db_editor.gd" type="Script" id=1]
[ext_resource path="res://addons/godot_db_manager/tables_list.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/godot_db_manager/dlgs/new_table_dlg.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/godot_db_manager/table_editor.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/godot_db_manager/dlgs/error_dlg.tscn" type="PackedScene" id=5]
[ext_resource path="res://addons/godot_db_manager/dlgs/delete_table_dlg.tscn" type="PackedScene" id=6]
[ext_resource path="res://addons/godot_db_manager/debug/dbg.tscn" type="PackedScene" id=7]

[node name="db_editor" type="Tabs"]
anchor_right = 1.0
anchor_bottom = 1.0
tab_align = 0
tab_close_display_policy = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true,
"_edit_vertical_guides_": [ 170.0, 900.0 ]
}

[node name="tables_list" parent="." instance=ExtResource( 2 )]
anchor_right = 0.0
margin_right = 170.0
rect_min_size = Vector2( 180, 30 )

[node name="table_editor" parent="." instance=ExtResource( 4 )]
margin_left = 181.0

[node name="dbg" parent="." instance=ExtResource( 7 )]
visible = false

[node name="new_table_dlg" parent="." instance=ExtResource( 3 )]
visible = false

[node name="delete_table_dlg" parent="." instance=ExtResource( 6 )]
visible = false

[node name="error_dlg" parent="." instance=ExtResource( 5 )]
visible = false
